finish: fix footer link spacing, make desktop nav

--- a/index.css
+++ b/index.css
@@ -149,7 +149,7 @@ h2{
     margin-bottom: 3%;
 }
 
-img{
+.slides-img{
     width: 100%;
     height: 25vh;
 }
@@ -191,6 +191,9 @@ footer{
 
 /* computer */
 @media (min-width: 700px){
+    header{
+        height: 1rem;
+    }
     .hero{
         height: 30rem;
     }
@@ -219,8 +222,37 @@ footer{
         flex-direction: row-reverse;
     }
     .quote{
-        width: 30vw;
-        height: 35vh;
-        margin-right: 15%;
+        width: 65vw;
+        height: 40vh;
+        margin-right: 20%;
     }
+    .productions{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        font-size: x-large;
+    }
+    h2{
+        font-size: 55px;
+    }
+    .slides-img{
+        height: 70vh;
+        width: 55vw;
+    }
+    .buttons{
+        position: absolute;
+        bottom: -125%;
+        left: 0;
+        margin: 0;
+        padding: 0 13%;
+        width: 100vw;
+        justify-content: space-between;
+    }
+    button{
+        font-size: 40px;
+    }
+
+    
 }
